# Semanarios_Desktop

./: .gitignore  README.md  __init__.py  config.ini  convert_ui_to_py.py  database.py  db.py  logica_aprontes.py  logica_aprontesCON UI.py  logica_main_window.py  logica_pesos_fisicos.py  logica_programas.py  logica_resultados.py  logica_temporal.py  main.py  pruebas.py  pyproject.toml  requirements_ai.txt  requirements_core.txt  requirements_uv.txt  rutinas.sql  temporal.py
core/: __init__.py
core/edit_txt_aprontes/: __init__.py  logica_aprontes.py  ui_aprontes.ui
core/edit_txt_pesos_fisicos/: __init__.py  logica_pesos_fisicos.py  ui_pesos_fisicos.ui
core/edit_txt_resultados/: __init__.py  logica_resultados.py  ui_resultados.ui
core/main/: __init__.py  logica_main_window.py  ui_main_window.ui
core/produccion_xtg/: __init__.py  logica_creacion_xtg.py  ui_creacion_xtg.ui  xtg_estudie.py  xtg_prueba.py
models/: __init__.py  models.py
pruebas/: cadenas.py  primera_palabra.py
