[project]
name = "semanarios-desktop"
version = "0.1.0"
description = "Proyecto para Semanarios, originalmente en Visual Basic 6"
dependencies = [
    "numpy==2.2.2",
    "pandas==2.2.2",
    "PyMySQL==1.1.0",
    "PySide6==6.8.2.1",
    "PySide6-Addons==6.8.2.1",
    "PySide6-Essentials==6.8.2.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "pytz==2024.1",
    "shiboken6==6.8.2.1",
    "six==1.17.0",
    "SQLAlchemy==2.0.32",
    "typing-extensions==4.12.2",
    "tzdata==2025.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# Opcional: Configura uv para usar un índice específico si es necesario
# index-url = "https://pypi.org/simple"